# lottiepp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: lottieppConfig.cmake.in
samples/: line_chart_grow.cpp  sample.json
src/: chart.cpp  chart.hpp  lottie_edit.cpp  lottie_edit.hpp  lottiepp.cpp  lottiepp.hpp  main.cpp
test/: CMakeLists.txt  test_lottie_edit.cpp
